lets do the thing right